# codex

./: GUI_PLAN.md
codex-rs/: Cargo.toml  README.md
codex-rs/app-server/: Cargo.toml  README.md
codex-rs/app-server-protocol/schema/json/: ClientRequest.json  ServerNotification.json  codex_app_server_protocol.schemas.json
codex-rs/app-server-protocol/schema/typescript/: ClientRequest.ts  ServerNotification.ts
codex-rs/app-server-protocol/src/protocol/: common.rs  v2.rs
codex-rs/app-server/src/: codex_message_processor.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: hub_cmd.rs  main.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: codex.rs  compact.rs  compact_remote.rs  export_markdown.rs  lib.rs  project_memory.rs
codex-rs/core/src/command_safety/: windows_safe_commands.rs
codex-rs/hub/: Cargo.toml  README.md
codex-rs/hub/src/: lib.rs
codex-rs/tui/: Cargo.toml
codex-rs/tui/src/: app.rs  app_event.rs  chatwidget.rs  lib.rs  screenshot.rs  slash_command.rs  status_indicator_widget.rs
docs/: config.md  slash_commands.md
gui/android/: .gitignore  README.md  settings.gradle.kts
gui/android/app/: build.gradle.kts  proguard-rules.pro
gui/android/gradle/: libs.versions.toml
gui/android/memories/: MEMORIES.MD
gui/desktop/: .eslintrc.cjs  README.md  index.html  package-lock.json  package.json
gui/desktop/memories/: MEMORIES.MD
gui/desktop/src/: App.tsx  app.css  index.css  types.ts
gui/desktop/src-tauri/: Cargo.toml  tauri.conf.json
gui/desktop/src-tauri/src/: main.rs
memories/: MEMORIES.MD
(+109 files in other folders)
